# aqua-bot

./: .gitignore  Cargo.toml
aqua_app/: Cargo.toml
aqua_app/src/: main.rs
aqua_commands/: Cargo.toml
aqua_commands/src/: hooks.rs  imports.rs  lib.rs
aqua_commands/src/general/: hi.rs  mod.rs  what.rs  who.rs
aqua_commands/src/internal/: hooks.rs  mod.rs  prelude.rs
aqua_util/: Cargo.toml
aqua_util/src/: lib.rs  time.rs
